# DLP

./: .env  .gitignore  main.py  pyproject.toml
app/: config.py  database.py  init_data.py
app/api/routes/: auth.py  dlp_admin.py  files.py  messages.py  url_checks.py  violations.py
app/dlp/: engine.py
app/dlp/analyzers/: sensitive_data_analyzer.py  text_analyzer.py  url_analyzer.py
app/models/: __init__.py  file.py  message.py  url_check.py  user.py  violation.py
app/schemas/: user.py
app/services/: violation_service.py  virustotal_service.py
app/utils/: security.py
app/websocket/: manager.py
static/: admin.html  admin.js  app.js  index.html  login.html  login.js  profile.html  profile.js  style.css
